--- a/css/eventCalendar_theme.css
+++ b/css/eventCalendar_theme.css
@@ -5,51 +5,154 @@
 	font-size: 13px; 
 	line-height: 18px; 
 	color: #555; 
-	background-color:#fff;
+	background-color:#eee;
+	
  }
 .eventCalendar-wrap {
 	width:300px;
-	border:solid 1px #ccc;
-	box-shadow:0 0 2px #ccc;
+	border:solid 1px #d3d3d3;
+	box-shadow:0 0 15px #999;
 	border-radius:5px;
 	margin-bottom:20px;
+	background-color:#fff;
+	color:#807E7E;
 }
 	.eventCalendar-wrap .arrow {
-		background:rgba(150,150,150,0.5);
-		
-		border-radius:5px;
 		text-decoration:none;
 		color:#fff;
 		padding:0 5px;
-		line-height:23px;
+		line-height:28px;
+		top:9px;
+		padding:8px 10px;
 	}
+		.eventCalendar-wrap .arrow.prev {
+
+		}
 		.eventCalendar-wrap .arrow:hover { opacity:0.7;}
+		.eventCalendar-wrap .arrow span {
+			height: 0;
+			width: 0;
+			font-size: 0;
+			line-height: 0;
+			border-top: 6px solid transparent;
+			border-bottom: 6px solid transparent;
+			border-left: 6px solid #fff;
+			float:left;
+			text-indent:-5000px;
+		}
+			.eventCalendar-wrap .arrow.prev span {
+				border-left-width:0;
+				border-right: 6px solid #fff;
+			}
 	.eventsCalendar-slider { height:80px;}
 	
 	.eventsCalendar-monthWrap {
-		background-color:#fff;
 		border-radius:5px;
+		top:10px;
+		left:0px;
 	}
 		.eventsCalendar-currentTitle {
-			line-height:30px;
+			line-height:25px;
+			background-color:#138DA5;
+			outline:1px solid #138DA5;
+			border:1px solid #E3E3E3;
+			border-width:1px 0;
 		}
 			.eventsCalendar-currentTitle .monthTitle {
-				font-size:120%;
+				font-size:110%;
 				text-decoration:none;
-				font-weight:Bold;
+				font-weight:bold;
+				color:#fff;
 			}
+			
 		.eventsCalendar-daysList {
-			margin:0; padding:0;
+			zoom: 1;
+			padding:0;
+			width:100%;
+			
 		}
-			.eventsCalendar-daysList li a {
-				text-decoration:none;
+			.eventsCalendar-daysList.showAsWeek {
+				margin:10px 5px;
+				width:auto;
+				
+								border:solid 1px #BCBCBC;
+				border-bottom-width:0;
+				border-radius:0;
+				background-color:#CCCCCC;
+				background-image: linear-gradient(top, #EEEEEE 42%, #CCCCCC 71%);
+				background-image: -o-linear-gradient(top, #EEEEEE 42%, #CCCCCC 71%);
+				background-image: -moz-linear-gradient(top, #EEEEEE 42%, #CCCCCC 71%);
+				background-image: -webkit-linear-gradient(top, #EEEEEE 42%, #CCCCCC 71%);
+				background-image: -ms-linear-gradient(top, #EEEEEE 42%, #CCCCCC 71%);
+
+				background-image: -webkit-gradient(
+					linear,
+					left top,
+					left bottom,
+					color-stop(0.42, #EEEEEE),
+					color-stop(0.71, #CCCCCC)
+				);
+
 			}
-			.eventsCalendar-daysList li.dayWithEvents {
-				background:rgba(0,255,0,0.5);
+			.eventsCalendar-daysList.showDayNames.showAsWeek {
+				
+				border-radius:5px 5px 0 0;
+			}
+			.eventsCalendar-daysList:before, .eventsCalendar-daysList:after { content:""; display:table; }
+			.eventsCalendar-daysList:after { clear: both; }
+			.eventsCalendar-day-header { 
+				text-transform:lowercase; 
+				text-align:center; 
+				font-size:10px;
+				border-bottom:solid 1px #BCBCBC;
+			}
+			.eventsCalendar-daysList.showAsWeek li {
+				height:auto;
+				
+			}
+				.eventsCalendar-daysList.showAsWeek li.empty {
+					background-color: #ccc;
+					min-height:29px;
+				}
+			.eventsCalendar-day a {
+				text-decoration:none;
+				font-size:10px;	
+				color:#424242;				
+			}
+			.showAsWeek .eventsCalendar-day a  {
+				border:solid 1px red;
+				border-color:#fff #BCBCBC #BCBCBC #eee;
+				line-height:27px;
+				font-size:11px;
+				
+			}
+				.showAsWeek .eventsCalendar-day a:hover {
+					background-color:#E4E4E4;
+					box-shadow:inset 5px 5px 10px #C1C1C1;
+					text-shadow: 2px 2px 2px #C1C1C1;
+				}
+			.eventsCalendar-daysList li.dayWithEvents a {
+				background:#89B814;
+				box-shadow:inset 5px 5px 10px #698B10;
+				text-shadow: 2px 2px 2px #698B10;
+				color:#fff;
 			} 
-			.eventsCalendar-daysList li.current {
-				background:rgba(255,0,0,0.5);
+				.showAsWeek li.eventsCalendar-day.dayWithEvents a:hover {
+					background-color:#C2D374;
+					box-shadow:inset 5px 5px 10px #89B814;
+					text-shadow: 2px 2px 2px #89B814;
+				}
+			.eventsCalendar-daysList li.current a {
+				color:#fff;
+				background:#449FB2;
+				box-shadow:inset 5px 5px 10px #216B7A;
+				text-shadow: 2px 2px 2px #216B7A;
 			} 
+				.showAsWeek li.eventsCalendar-day.current a:hover {
+					background-color:#79BDCC;
+					box-shadow:inset 5px 5px 10px #449FB2;
+					text-shadow: 2px 2px 2px #449FB2;
+				}
 		.eventsCalendar-loading {
 			border-radius:4px;
 			margin:5px auto;
@@ -69,38 +172,46 @@
 				background-color:red;
 			}
 #eventsCalendar-list-wrap {
-	min-height:320px;
+	min-height:100px;
 	position:relative;
 }
 	.eventsCalendar-list {
 		margin:0; padding:0; list-style-type:none;
 	}
 	.eventsCalendar-list li {
-		padding:0 5px 10px;
+		padding:0 5px 15px;
 		margin:0;
+		clear:both;
 	}
-		.eventsCalendar-list li em {
+		.eventsCalendar-list li time {
+			font-size:10px;
+			line-height:13px;
+		}
+		.eventsCalendar-list li time em {
 			float:left;
 			font-style:normal;
 		}
-		.eventsCalendar-list li time {
-			
+		.eventsCalendar-list li time small {
+			font-size:10px;
 			float:left;
-			background-color:#ccc;
-			padding:0 3px;
-			margin-left:3px;
-			
+			background-color:#807E7E;
+			color:#fff;
+			padding:0 5px 0 4px;
+			margin:0 0 0 3px;
 		}
-		.eventsCalendar-list li strong {
-			float:left;
-			clear:both;
-		}
-		.eventsCalendar-list li p {
+		.eventsCalendar-list li .eventTitle {
 			display:block;
+			clear:both;
+			color:#0E8EAB;
+			font-weight:bold;
+			text-decoration:none;
+		}
+		.eventsCalendar-list li .eventDesc {
 			clear: both;
-			margin:0;
+			margin:0 0 5px 0;
 			font-size:80%;
 			line-height:1.2em;
+			
 		}
 		.eventsCalendar-list .eventsCalendar-noEvents {
 			font-size:120%;
@@ -115,5 +226,68 @@
 			box-shadow:0 0 10px #ccc;
 			text-shadow:0 0 3px #aaa;
 		}
+
+.bt {
+	font-size:12px;
+	display:block;
+	clear:both;
+	text-align: center;
+	margin-top:10px;
+	padding: 9px 34px 11px;
+	text-decoration: none;
+	font-weight: bold;
+	line-height: 1;
 	
+	color: #ffffff;
+	background-color: #698B10;
+	background-repeat: repeat-x;
+	
+	background-image: -khtml-gradient(linear, left top, left bottom, from(#89B814), to(#698B10));
+	background-image: -moz-linear-gradient(top, #89B814, #698B10);
+	background-image: -ms-linear-gradient(top, #89B814, #698B10);
+	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #89B814), color-stop(100%, #698B10));
+	background-image: -webkit-linear-gradient(top, #89B814, #698B10);
+	background-image: -o-linear-gradient(top, #89B814, #698B10);
+	background-image: linear-gradient(top, #89B814, #698B10);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#89B814', endColorstr='#698B10', GradientType=0);
+	
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	
+	border: 1px solid #698B10;
+	border-color: #698B10 #698B10 #465F05;
+	
+	border-radius: 4px;
+	
+	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+	
+	-webkit-transition: 0.1s linear all;
+	-moz-transition: 0.1s linear all;
+	-ms-transition: 0.1s linear all;
+	-o-transition: 0.1s linear all;
+	transition: 0.1s linear all;
+}		
+.bt:hover {
+	  background-position: 0 -15px;
+	  text-decoration: none;
+	}
 /* end of theme css */	
+
+
+/*= ONLY FOR DEMO PAGE */
+body { width:978px; box-shadow:0 0 20px #000; padding: 20px; margin:0 auto;}
+.eventCalendar-wrap {
+	width:265px;
+}
+#DemoList { list-style-type:none; padding:0;}
+#DemoList > li { margin-right:50px; float:left;}
+#DemoList > li > h2 { margin:20px 0 3px 0;}
+#DemoList > li > p { width:200px; margin:0 0 10px 0;}
+.fl { float:left;}
+.cb { clear:both;}
+
+#eventCalendarDefault { width:195px;}
+	
+#eventCalendarNoCache { width:650px; }
+
+
+/* end of demo page */
