--- a/css/eventCalendar_theme.css
+++ b/css/eventCalendar_theme.css
@@ -109,7 +109,6 @@
 			}
 			.eventsCalendar-daysList.showAsWeek li {
 				height:auto;
-				
 			}
 				.eventsCalendar-daysList.showAsWeek li.empty {
 					background-color: #ccc;
@@ -120,6 +119,14 @@
 				font-size:10px;	
 				color:#424242;				
 			}
+			.eventsCalendar-day {
+				border-left:solid 1px #BCBCBC;
+			}
+			.eventsCalendar-day a  {
+				border:solid 1px #BCBCBC;
+				border-width:0 1px 1px 0;
+			}
+			.showAsWeek .eventsCalendar-day { border-left-width:0;}
 			.showAsWeek .eventsCalendar-day a  {
 				border:solid 1px red;
 				border-color:#fff #BCBCBC #BCBCBC #eee;
@@ -127,7 +134,7 @@
 				font-size:11px;
 				
 			}
-				.showAsWeek .eventsCalendar-day a:hover {
+				.eventsCalendar-day a:hover {
 					background-color:#E4E4E4;
 					box-shadow:inset 5px 5px 10px #C1C1C1;
 					text-shadow: 2px 2px 2px #C1C1C1;
@@ -138,7 +145,7 @@
 				text-shadow: 2px 2px 2px #698B10;
 				color:#fff;
 			} 
-				.showAsWeek li.eventsCalendar-day.dayWithEvents a:hover {
+				li.eventsCalendar-day.dayWithEvents a:hover {
 					background-color:#C2D374;
 					box-shadow:inset 5px 5px 10px #89B814;
 					text-shadow: 2px 2px 2px #89B814;
@@ -149,7 +156,7 @@
 				box-shadow:inset 5px 5px 10px #216B7A;
 				text-shadow: 2px 2px 2px #216B7A;
 			} 
-				.showAsWeek li.eventsCalendar-day.current a:hover {
+				li.eventsCalendar-day.current a:hover {
 					background-color:#79BDCC;
 					box-shadow:inset 5px 5px 10px #449FB2;
 					text-shadow: 2px 2px 2px #449FB2;
@@ -213,6 +220,7 @@
 			font-weight:bold;
 			text-decoration:none;
 		}
+			.eventsCalendar-list li .eventTitle:hover { text-decoration:underline;}
 		.eventsCalendar-list li .eventDesc {
 			clear: both;
 			margin:0 0 5px 0;
@@ -292,7 +300,7 @@ a { color: #0E8EAB}
 	width:265px;
 }
 #DemoList { list-style-type:none; padding:0;}
-#DemoList > li { margin-right:50px; float:left;}
+#DemoList > li { margin-right:40px; float:left;}
 #DemoList > li > h2 { margin:20px 0 3px 0;}
 .demoDesc { width:200px; margin:0 0 10px 0;}
 .fl { float:left;}
