--- a/css/eventCalendar_theme_responsive.css
+++ b/css/eventCalendar_theme_responsive.css
@@ -3,10 +3,10 @@
 	background-color:#eee;
  }
  body {
-	font-family: Arial, "Lucida Grande", sans-serif; 
-	font-size: 13px; 
-	line-height: 18px; 
-	color: #555; 
+	font-family: Arial, "Lucida Grande", sans-serif;
+	font-size: 13px;
+	line-height: 18px;
+	color: #555;
 	background-color:#fff;
  }
 .eventCalendar-wrap {
@@ -45,7 +45,7 @@
 				border-right: 6px solid #fff;
 			}
 	.eventsCalendar-slider { height:80px;}
-	
+
 	.eventsCalendar-monthWrap {
 		border-radius:5px;
 		top:10px;
@@ -64,17 +64,17 @@
 				font-weight:bold;
 				color:#fff;
 			}
-			
+
 		.eventsCalendar-daysList {
 			zoom: 1;
 			padding:0;
 			width:100%;
-			
+
 		}
 			.eventsCalendar-daysList.showAsWeek {
 				margin:10px 5px;
 				width:auto;
-				
+
 								border:solid 1px #BCBCBC;
 				border-bottom-width:0;
 				border-radius:0;
@@ -95,14 +95,14 @@
 
 			}
 			.eventsCalendar-daysList.showDayNames.showAsWeek {
-				
+
 				border-radius:5px 5px 0 0;
 			}
 			.eventsCalendar-daysList:before, .eventsCalendar-daysList:after { content:""; display:table; }
 			.eventsCalendar-daysList:after { clear: both; }
-			.eventsCalendar-day-header { 
-				text-transform:lowercase; 
-				text-align:center; 
+			.eventsCalendar-day-header {
+				text-transform:lowercase;
+				text-align:center;
 				font-size:10px;
 				border-bottom:solid 1px #BCBCBC;
 			}
@@ -115,8 +115,8 @@
 				}
 			.eventsCalendar-day a {
 				text-decoration:none;
-				font-size:10px;	
-				color:#424242;				
+				font-size:10px;
+				color:#424242;
 			}
 			.eventsCalendar-day {
 				border-left:solid 1px #BCBCBC;
@@ -131,30 +131,43 @@
 				border-color:#fff #BCBCBC #BCBCBC #eee;
 				line-height:27px;
 				font-size:11px;
-				
+
 			}
 				.eventsCalendar-day a:hover {
 					background-color:#E4E4E4;
-					box-shadow:inset 5px 5px 10px #C1C1C1;
-					text-shadow: 2px 2px 2px #C1C1C1;
+				/*	box-shadow:inset 5px 5px 10px #C1C1C1;
+					text-shadow: 2px 2px 2px #C1C1C1;*/
 				}
+			.eventsCalendar-daysList li.today a {
+				color:#fff;
+				background:#aaa;
+			/*	box-shadow:inset 5px 5px 10px #777;
+				text-shadow: 2px 2px 2px #777;*/
+			}
+				li.eventsCalendar-day.today a:hover {
+					background-color:#ccc;
+					/*box-shadow:inset 5px 5px 10px #999;*/
+				}
+
 			.eventsCalendar-daysList li.dayWithEvents a {
 				background:#89B814;
-				box-shadow:inset 5px 5px 10px #698B10;
-				text-shadow: 2px 2px 2px #698B10;
+				/*box-shadow:inset 5px 5px 10px #698B10;
+				text-shadow: 2px 2px 2px #698B10;*/
 				color:#fff;
-			} 
+			}
 				li.eventsCalendar-day.dayWithEvents a:hover {
 					background-color:#C2D374;
-					box-shadow:inset 5px 5px 10px #89B814;
-					text-shadow: 2px 2px 2px #89B814;
+					/*box-shadow:inset 5px 5px 10px #89B814;
+					text-shadow: 2px 2px 2px #89B814;*/
 				}
+
+
 			.eventsCalendar-daysList li.current a {
 				color:#fff;
 				background:#449FB2;
 				box-shadow:inset 5px 5px 10px #216B7A;
 				text-shadow: 2px 2px 2px #216B7A;
-			} 
+			}
 				li.eventsCalendar-day.current a:hover {
 					background-color:#79BDCC;
 					box-shadow:inset 5px 5px 10px #449FB2;
@@ -174,18 +187,18 @@
 			z-index:4;
 			top:25px;
 			left:5px;
-		}	
+		}
 			.eventsCalendar-loading.error {
 				background-color:red;
 			}
-			
+
 .eventsCalendar-subtitle { padding-top:10px;}
 .eventsCalendar-list-wrap {
 	min-height:100px;
 	position:relative;
 }
 	.eventsCalendar-list-content.scrollable {
-		
+
 		height:100px;
 		overflow-y:auto;
 		margin:0 5px 5px 0;
@@ -217,24 +230,27 @@
 		.eventsCalendar-list li .eventTitle {
 			display:block;
 			clear:both;
-			color:#0E8EAB;
+
 			font-weight:bold;
 			text-decoration:none;
 		}
-			.eventsCalendar-list li .eventTitle:hover { text-decoration:underline;}
+			.eventsCalendar-list li a.eventTitle {
+				color:#0E8EAB;
+			}
+			.eventsCalendar-list li a.eventTitle:hover { text-decoration:underline;}
 		.eventsCalendar-list li .eventDesc {
 			clear: both;
 			margin:0 0 5px 0;
 			font-size:80%;
 			line-height:1.2em;
-			
+
 		}
 		.eventsCalendar-list .eventsCalendar-noEvents {
 			font-size:120%;
 			border-radius:4px;
 			margin:5px;
 			padding:5px;
-			
+
 			background-color:#ccc;
 			color:#fff;
 			text-align:center;
@@ -253,11 +269,11 @@
 	text-decoration: none;
 	font-weight: bold;
 	line-height: 1;
-	
+
 	color: #ffffff;
 	background-color: #698B10;
 	background-repeat: repeat-x;
-	
+
 	background-image: -khtml-gradient(linear, left top, left bottom, from(#89B814), to(#698B10));
 	background-image: -moz-linear-gradient(top, #89B814, #698B10);
 	background-image: -ms-linear-gradient(top, #89B814, #698B10);
@@ -266,35 +282,35 @@
 	background-image: -o-linear-gradient(top, #89B814, #698B10);
 	background-image: linear-gradient(top, #89B814, #698B10);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#89B814', endColorstr='#698B10', GradientType=0);
-	
+
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-	
+
 	border: 1px solid #698B10;
 	border-color: #698B10 #698B10 #465F05;
-	
+
 	border-radius: 4px;
-	
+
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-	
+
 	-webkit-transition: 0.1s linear all;
 	-moz-transition: 0.1s linear all;
 	-ms-transition: 0.1s linear all;
 	-o-transition: 0.1s linear all;
 	transition: 0.1s linear all;
-}		
+}
 .bt:hover {
 	  background-position: 0 -15px;
 	  text-decoration: none;
 	}
-/* end of theme css */	
+/* end of theme css */
 
 
 /*= ONLY FOR DEMO PAGE */
 body {
-/* 
+/*
 	width:978px;
-	box-shadow:0 0 10px #777; 
-	padding: 20px 40px; 
+	box-shadow:0 0 10px #777;
+	padding: 20px 40px;
 	margin:0 auto;
 	*/
 }
@@ -314,7 +330,7 @@ a { color: #0E8EAB}
 }
 	.poweredBy .data {
 		float:left;
-	}	
+	}
 	.poweredBy .name {
 		font-weight:bold;
 		color:#555;
@@ -330,7 +346,7 @@ a { color: #0E8EAB}
 .features {
 	padding-left:20px;
 	float:left;
-}	
+}
 #appLogo {
 	margin-right:30px;
 }
