Changed eventDesc class to eventDescription
 - Its always clearer to have the complete word

--- a/css/eventCalendar_theme.css
+++ b/css/eventCalendar_theme.css
@@ -231,7 +231,7 @@
 			text-decoration:none;
 		}
 			.eventsCalendar-list li .eventTitle:hover { text-decoration:underline;}
-		.eventsCalendar-list li .eventDesc {
+		.eventsCalendar-list li .eventDescription {
 			clear: both;
 			margin:0 0 5px 0;
 			font-size:80%;
